<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Kings\' Education</string>
    <string name="SchoolCalender">School Calender</string>
    <string name="StudentInformation">Student Information</string>
    <string name="Canteen">Canteen</string>
    <string name="Payments">Payments</string>
    <string name="Timetable">Timetable</string>
    <string name="Absencereporting">Absencereporting</string>
    <string name="form">Student Planner</string>
    <string name="Home">Home</string>
    <string name="Message">Notifications</string>
    <string name="About">About</string>
    <string name="Contact">Contact Us</string>
    <string name="Settings">Settings</string>
    <string name="staff_directory_detail">Staff Directory Detail</string>
    <string name="search">Search…</string>
    <string name="staff_directory">Staff Directory</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="submit">Submit</string>
    <string name="change_password">Change Password</string>
    <string name="about_us">About Us</string>
    <string name="Select_Child">Select Child</string>
    <string name="absence">Absence Reporting</string>
    <string name="registernewabsence">Register New Absence</string>
    <string name="registerabsence">Register Absence</string>
    <string name="absencedetails">Absence Details</string>
    <string name="backtlolits">Back to List</string>
    <string name="registerearlypickup">Register Early Pickup</string>
    <string name="early_pickup">Early Pickup</string>
    <string name="registernewearlypickup">Register Early Pickup</string>
    <string name="early_pikup_details">Early Pickup</string>
    <string name="day_of_pickup">DAY OF PICKUP<font fgcolor='#FF0000'> * </font></string>
    <string name="time_of_pickup">TIME OF PICKUP<font fgcolor='#FF0000'> * </font></string>
    <string name="pickup_by">PICK-UP BY<font fgcolor='#FF0000'> * </font></string>
    <string name="status">STATUS<font fgcolor='#FF0000'> * </font></string>
    <string name="reason_for_early_pickup">REASON FOR EARLY PICK-UP<font fgcolor='#FF0000'> * </font></string>
    <string name="rejetion_for_early_pickup">REJECTION FOR EARLY PICK-UP<font fgcolor='#FF0000'> * </font></string>
    <string name="parent_essentials">Parent Essentials</string>
    <string name="social_media">Social Media</string>
    <string name="teacher_contact">Teacher Contact</string>
    <string name="school_calendar">School Calendar</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="refine_ategory">Refine calendar by category</string>
    <string name="past_events">Past Events:</string>
    <string name="forms">Forms</string>
    <string name="reports">Reports</string>
    <string name="re_enrolments">Re-Enrolments</string>
    <string name="timetable">Time Table</string>
    <string name="student_planner">Student Planner</string>
    <string name="contact_form">School Feedback</string>
    <string name="enter_your_subject_here">Enter your subject here...</string>
    <string name="enter_content">Enter content:</string>
    <string name="cancel">Cancel</string>
    <string name="apps">Apps</string>
    <string name="name">NAME</string>
    <string name="classs">CLASS</string>
    <string name="address">Address</string>
    <string name="loading">Loading&#8230;</string>
    <string name="new_version_available">New Version Available</string>
    <string name="force_update">There is a newer version available for download! Please update the app by visiting the Google Play Store</string>
    <string name="ContactUs">Contact Us</string>
    <string-array name="setting_list">
        <item> Change App Settings</item>
        <item>Terms of Service</item>
        <item> Tutorial</item>
        <item> Delete My Account</item>
        <item>Change Password</item>
        <item>Sign Out</item>
    </string-array>
    <string-array name="about_us_list">
        <item> Staff Directory</item>
        <item>Facilities</item>
        <item> Accreditation &amp; Examination</item>
        <item> About Kings\'s Eductions</item>
        <item>Our Philosophy</item>
    </string-array>
    <string-array name="staff_dir_list">
        <item> Administration</item>
        <item>Arabic</item>
        <item> Art</item>
        <item> Business Studies</item>
        <item>Computer Science</item>
        <item> Design and Technology</item>
        <item>English</item>
        <item> History</item>
        <item>Maths</item>
    </string-array>
    <string name="setthedate">Set the Date</string>
    <string name="placeholder_short">Lorem Ipsum</string>
    <string name="placeholder_shortt">We are the only school in the United Arab Emirates to have achieved an ‘outstanding’ rating by the Dubai Schools Inspection Bureau every year since inspections began</string>
    <string name="logoheading">KINGS\' EDUCATION</string>
    <string name="logoheading1">Kings\'\nEducation</string>
    <string name="FirstDayOfAbsence">First Day Of Absence<font fgcolor='#FF0000'> * </font></string>
    <string name="ReasonForAbsence">Reason For Absence<font fgcolor='#FF0000'> * </font></string>
    <string name="ReturnToSchoolIfKnown">Return To School If Known</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="placeholder_long">Dear All,
        We are getting ready for the 2022/23 school year portraits.Photographers from Fotorex will be on campus nest weeek.</string>
    <string-array name="home_list_items">
        <item>  Home</item>
        <item>  Student Info </item>
        <item>  School Calendar</item>
        <item>  Notifications</item>
        <item>  Newsletters</item>
        
        <item>  Absence Reporting</item>
        <item>  Early Pickup</item>
        <item>  Payments</item>
        <item>  Time Table</item>
        <item>  Parent Essentials</item>
        <item>  Staff Directory</item>
        <item>  Reports </item>
        <item> Forms</item>
        <item>  Apps</item>
        <item>  Social Media</item>
        <item>  School Feedback</item>
        <item>  Contact Us</item>
    </string-array>
    <string name="null_value" translatable="false">
    </string>
    <string-array name="home_list_reg_icons">

        
        
        
        <item>@drawable/home4</item>
        <item>@drawable/sidebar_student_information</item>
        
        
        
        
        <item>@drawable/calender4</item>
        <item>@drawable/message_white</item>
        <item>@drawable/newsletter</item>
        
        <item>@drawable/absence4</item>
        <item>@drawable/earlypickup</item>
        <item>@drawable/payment</item>
        <item>@drawable/timetable4</item>
        <item>@drawable/parent</item>
        <item>@drawable/directory</item>
        
        

        <item>@drawable/report_side</item>

        
        <item>@drawable/forms</item>

        <item>@drawable/app</item>
        <item>@drawable/social</item>
        <item>@drawable/feedback</item>
        <item>@drawable/chatting_clicked</item>
        


    </string-array>
    <string-array name="student_list">
        <item> Jane Mathewes</item>
        <item>Esther Mathews</item>
        <item> Guy Mathewes</item>
    </string-array>
    <string-array name="parent_list">
        <item> Term Dates</item>
        <item>Uniform</item>
        <item> Kings Lunch Box Menu</item>
        <item> Bus Service</item>
        <item> Information</item>

    </string-array>
    <string-array name="Months">
        <item> January </item>
        <item> February </item>
        <item> March </item>
        <item> April </item>
        <item> May </item>
        <item> June </item>
        <item> July </item>
        <item> August </item>
        <item> September </item>
        <item> October </item>
        <item> November </item>
        <item> December </item>
    </string-array>
    <string-array name="Weeks">
        <item> Sun</item>
        <item> Mon</item>
        <item> Tue</item>
        <item> Wed</item>
        <item> Thur</item>
        <item> Fri</item>
        <item> Sat</item>

    </string-array>
    <string-array name="Days">
        <item> 1 </item>
        <item>  2</item>
        <item>3  </item>
        <item> 4 </item>
        <item>  5</item>
        <item>6  </item>
        <item> 7 </item>
        <item>  8</item>
        <item>9  </item>
        <item> 10 </item>
        <item>  11</item>
        <item> 12 </item>
        <item>13  </item>
        


    </string-array>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thur</string>
</resources>