<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@android:color/transparent"
    android:orientation="vertical"
    >
<RelativeLayout
    android:id="@+id/sendEmailDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <ImageView
            android:id="@+id/a"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/dialoguetopcurve"
            android:gravity="center"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/b"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:scaleType="fitCenter" />

       <!-- <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/message4" />-->
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/r"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/dialoguebottomcurve">


        <TextView
            android:id="@+id/alertHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/contact_form"
            android:textColor="@color/rel_two"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/text_dialog"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/alertHead"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_gravity="left|center_vertical"
            android:hint="@string/enter_your_subject_here"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:background="@drawable/edittext_greybg"
            android:imeOptions="actionNext"
            android:singleLine="true"/>
        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="left"
            android:layout_below="@+id/text_dialog"
            android:text="@string/enter_content"
            android:textColor="#ff000000"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            />
        <EditText
            android:id="@+id/text_content"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@+id/text"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_gravity="left"
            android:textColor="@color/black"
            android:background="@drawable/edittext_greybg"
            android:imeOptions="actionDone"/>
        <TextView
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_below="@+id/text_content"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:background="@color/kings_blue"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_below="@+id/submitButton"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:background="@color/border_grey"
            android:textColor="@color/white"/>

    </LinearLayout>
</RelativeLayout>
</ScrollView>